--- a/InfrastructureProject/InfrastructureProject.csproj
+++ b/InfrastructureProject/InfrastructureProject.csproj
@@ -6,4 +6,12 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ExtractorProject\ExtractorProject.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.4" />
+    </ItemGroup>
+
 </Project>
