--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\InfrastructureProject\InfrastructureProject.csproj" />
+    </ItemGroup>
+
 </Project>
