--- a/Parser/Parser.csproj
+++ b/Parser/Parser.csproj
@@ -9,7 +9,14 @@
 
     <ItemGroup>
       <PackageReference Include="AngleSharp" Version="1.0.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3-beta1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Core\Core.csproj" />
+      <ProjectReference Include="..\ExtractorProject\ExtractorProject.csproj" />
+      <ProjectReference Include="..\InfrastructureProject\InfrastructureProject.csproj" />
     </ItemGroup>
 
 </Project>
