--- a/ExtractorProject/ExtractorProject.csproj
+++ b/ExtractorProject/ExtractorProject.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
       <PackageReference Include="AngleSharp" Version="1.0.2-alpha-278" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
 </Project>
