Добавил логику создания тасок в очередь по названию классов

--- a/Application/appsettings.json
+++ b/Application/appsettings.json
@@ -1,3 +1,10 @@
 ﻿{
-   "SqliteConnectionString":"Data Source=myDb.db"
+   "SqliteConnectionString":"Data Source=myDb.db",
+   
+   "LabirintProviderSettings":
+   {
+      "MinId":1,
+      "MaxId":900000,
+      "CatalogUrl":"https://www.labirint.ru/books/"
+   }
 }
