--- a/Application/appsettings.json
+++ b/Application/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
-   "SqliteConnectionString":"Data Source=myDb.db",
+   "SqliteConnectionString":"Data Source=users-17.04.db",
    
    "LabirintProviderSettings":
    {
