--- a/Application/appsettings.json
+++ b/Application/appsettings.json
@@ -1,10 +1,15 @@
 ﻿{
    "SqliteConnectionString":"Data Source=LiveLibBooks.db",
    
-   "LabirintProviderSettings":
-   {
-      "MinId":1,
-      "MaxId":900000,
-      "CatalogUrl":"https://www.labirint.ru/books/"
-   }
+   "LabirintProviderSettings": {
+      "MinId": 1,
+      "MaxId": 900000,
+      "CatalogUrl": "https://www.labirint.ru/books/"
+   },
+
+   "LiveLibProviderSettingsInfo": {
+      "CategoriesURL": [
+         "https://www.livelib.ru/genre/%D0%97%D0%B0%D1%80%D1%83%D0%B1%D0%B5%D0%B6%D0%BD%D0%B0%D1%8F-%D0%BB%D0%B8%D1%82%D0%B5%D1%80%D0%B0%D1%82%D1%83%D1%80%D0%B0"
+      ]
+   }  
 }
